Solved a problem with the list view, in which the scrollbar in windows overlapped with the column titles

--- a/client/css/listView.css
+++ b/client/css/listView.css
@@ -1,6 +1,6 @@
 #listView {
     height: calc(100vh - 86px);
-    padding-top: 36px;
+    margin-top: 36px;
     display: none;
     position: relative;
     overflow: auto;
